trying to fix visibility

--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "https://blog.yrieix.com"
+baseURL: "https://yleprince.github.io/blog"
 languageCode: en-us
 title: "Yrieix's blog"
 theme: "PaperMod"
