--- a/config.yml
+++ b/config.yml
@@ -2,3 +2,11 @@ baseURL: "https://yleprince.github.io/blog"
 languageCode: en-us
 title: "Yrieix's blog"
 theme: "PaperMod"
+
+params:
+  ShowShareButtons: true
+  socialIcons:
+    - name: github
+      url: "https://github.com/yleprince"
+    - name: linkedin
+      url: "https://www.linkedin.com/in/yrieixleprince/"
