--- a/config.yml
+++ b/config.yml
@@ -10,3 +10,9 @@ params:
       url: "https://github.com/yleprince"
     - name: linkedin
       url: "https://www.linkedin.com/in/yrieixleprince/"
+
+outputs:
+  home:
+    - HTML
+    - RSS
+    - JSON # is necessary
