adding bread crumbs

--- a/config.yml
+++ b/config.yml
@@ -6,6 +6,7 @@ theme: "PaperMod"
 params:
   ShowShareButtons: false
   ShowReadingTime: true
+  ShowBreadCrumbs: true
   socialIcons:
     - name: github
       url: "https://github.com/yleprince"
